customized homepage view

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,16 @@
 {% block title %}Homepage{% endblock title %}
 
 {% block content %}
-    <h2>Welcome to my Bakirkhata app</h2>
-    <p>Here you as a shop owner is empowered as to keep record of baki</p>
+<section class="hero">
+    <div>
+        <h6 class="display-3">Welcome to bakirkhata</h6>
+        <p>Manage Your Credit Seamlessly</p>
+        {% comment %} <p>Easily register customers and track outstanding balances to stay on top of your credit management.</p> {% endcomment %}
+        <div class="btn-group mt-3">
+            <a href="#register" class="btn btn-outline-light">Register Customers</a>
+            <a href="#manage" class="btn btn-hover">Manage Baki</a>
+        </div>
+
+    </div>
+  </section>
 {% endblock content %}
