--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,60 @@
 header {
     .navbar {
+        background-color: #f7cf9e;
+
         .navbar-brand {
-            width: 50px;
+            width: 30px;
+
             .logo-img {
                 scale: 3;
             }
         }
+    }
+}
+
+main {
+    .hero {
+        height: 100vh;
+        background: linear-gradient(rgba(0, 0, 0, 0.5),
+                rgba(0, 0, 0, 0.5)),
+            url('./../../media/bakirkhata-hero-background-img.jpg') no-repeat center center;
+        background-size: cover;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        text-align: center;
+
+        h1 {
+            font-size: 3rem;
+            font-weight: 700;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+        }
+
+        p {
+            font-size: 1.2rem;
+            margin: 20px 0;
+            max-width: 600px;
+            text-align: center;
+            justify-self: center;
+        }
+
+        .btn-group {
+            .btn {
+                margin: 0 10px;
+                padding: 15px 30px;
+                font-size: 1rem;
+
+                &.btn-hover {
+                    background: #fff;
+
+                    &:hover {
+                        background: #d6d5d5;
+                    }
+                }
+            }
+        }
+
     }
 }
