--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,7 +12,9 @@ header {
     }
 }
 
-main {
+.main-content {
+    margin-top: 70px;
+
     .hero {
         height: 100vh;
         background: linear-gradient(rgba(0, 0, 0, 0.5),
