customer table altred and customer model class added

--- a/customer/templates/customer/dashboard/list.html
+++ b/customer/templates/customer/dashboard/list.html
@@ -14,10 +14,10 @@ Customers list
           <thead class="table-dark">
             <tr>
               <th scope="col">#</th>
-              <th scope="col">Name</th>
-              <th scope="col">Phone</th>
-              <th scope="col">Address</th>
               <th scope="col">Picture</th>
+              <th scope="col">Name</th>
+              <th scope="col">balance</th>
+              <th scope="col">Phone</th>
               <th scope="col">Action</th>
             </tr>
           </thead>
