--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,6 +26,7 @@ header {
         justify-content: center;
         color: white;
         text-align: center;
+        margin-top: -70px;
 
         h1 {
             font-size: 3rem;
