--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
     <header class="position-relative w-100">
         <nav class="navbar navbar-expand-lg navbar-light fw-bold position-fixed top-0 start-0 w-100">
             <div class="container">
-              <a class="navbar-brand" href="#">
+              <a class="navbar-brand" href="{% url 'home' %}">
                 <img src="{{ MEDIA_URL }}BAKIR.png" alt="logo" class="img-fluid logo-img">
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,10 +23,10 @@
                 
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link {% if request.path == '/' %}active{% endif %}" aria-current="page" href="{% url 'home' %}">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="{% url 'customer:all-customers' %}">Customer</a>
+                    <a class="nav-link {% if request.path == '/customers/all-customers/' %}active{% endif %}" href="{% url 'customer:all-customers' %}">Customer</a>
                   </li>
                 </ul>
                 <div class="">
