--- a/customer/templates/customer/dashboard/add.html
+++ b/customer/templates/customer/dashboard/add.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% load crispy_forms_tags %}
 
 {% block title %}
 Customers list
@@ -9,6 +10,12 @@ Customers list
     <a href="#" class="btn btn-warning"><i class="fa-solid fa-caret-left"></i> Go back</a>
 
     <p class="h2 mt-2">Create New Customer</p>
+
+    <form class="col-md-6" action="">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <button class="btn btn-success">Create</button>
+    </form>
 
 </div>
 {% endblock content %}
