--- a/customer/templates/customer/dashboard/add.html
+++ b/customer/templates/customer/dashboard/add.html
@@ -10,7 +10,7 @@ Customers list
 
     <p class="h2 mt-2">Create New Customer</p>
 
-    <form class="col-md-6" method="post">
+    <form class="col-md-6" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form|crispy }}
         <button class="btn btn-success">Create <i class="fa-solid fa-floppy-disk"></i></button>
